--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -15,103 +15,109 @@
     </div>
 
     <div class="row h-100" style="z-index: 2;">
+
         <div class="col-6" style="height: 100%;">
 
             <div class="row">
+                <div class="col-12 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid mx-auto custom-image random-padding" alt="Responsive Image" style="animation: opacityThree 3s infinite alternate; animation-delay: 2s;" />
+                </div>
+            </div>
 
-                <div class="col-md-12 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto" alt="Responsive Image" />
+            <div class="row">
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityThree 4s infinite alternate; animation-delay: 1s;" />
                 </div>
 
-                <div class="col-md-12">
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate; animation-delay: 3s;" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 3s infinite alternate; animation-delay: 1s;" />
+                </div>
+
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityThree 2s infinite alternate; animation-delay: 2s;" />
+                </div>
+
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 2s infinite alternate; animation-delay: 3s;" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 1s;" />
+                </div>
+
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate; animation-delay: 3s;" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid large-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 2s;" />
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <div class="col-6" style="height: 100%;">
+
+            <div class="row">
+                <div class="col-md-12 center-images-formatting order-sm-2" style="padding-top: 20px;">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 2s;" />
+                </div>
+
+                <div class="col-md-12 order-sm-1" style="z-index: 2;">
                     <div class="row">
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2s;">
                             <div class="skills-title">My Skills:</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.3s; ">
                             <div class="skill">Javascript</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.6s;">
                             <div class="skill">C#</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.9s;">
                             <div class="skill">HTML</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.2s;">
                             <div class="skill">CSS</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.5s;">
                             <div class="skill">.NET</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.8s;">
                             <div class="skill">NodeJS</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 4.1s;">
                             <div class="skill">MongoDB</div>
                         </div>
 
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-6" style="height: 100%;">
-
-            <div class="row">
-                <div class="col-12 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid mx-auto custom-image" alt="Responsive Image"  />
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-6 center-images-formatting" >
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
-                </div>
-
-                <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
-                </div>
-
-                <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
-                </div>
-
-                <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
-                </div>
-
-                <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid large-displays mx-auto" alt="Responsive Image" />
-                </div>
-            </div>
 
         </div>
+
+        
     </div>
 
 </div>
@@ -123,6 +129,14 @@
     <div class="container section-width align-items-center text-lg-left" style="background-color: var(--blue);">
         <h3 class="section-headers" style="color: white">Knowledge</h3>
     </div>
+
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 50px; font-size: 24px;" >
+        <p class="text-color">
+            Think of websites as human bodies – each section plays a specific role, just like different parts of the body. Seeing websites in this light makes it easier to navigate and 
+            design each part successfully. It's like understanding the anatomy of a website!
+        </p>
+    </div>
+
 
     <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 100px;">
 
@@ -141,11 +155,18 @@
                                 </div>
 
                                 <div class="col-lg-12">
+
                                     <p class="text-color">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas. 
-                                        Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem. 
-                                    </p>
+                                        Front-End is like the face of your website, shaping its appearance and handling user interactions. Think of CSS, Javascript, and 
+                                        smart website design as the stylish clothes and a great hairstyle – they're what make your website look and feel fantastic.
+                                     </p>
+                                
+                                 </div>
+
+                                 <div class="col-lg-12" style="padding-bottom: 10px;">
+                                    <h1 class="text-color">My Skills:</h1>
                                 </div>
+
                     
                                 <div class="col-lg-12">
 
@@ -182,9 +203,13 @@
 
                                 <div class="col-lg-12">
                                     <p class="text-color">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
-                                        Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem.
+                                        Back-End serves as the heart and brain of your website, managing and powering everything you see. Website security acts as the immune system, 
+                                        ensuring a safe and secure environment. The brain, represented by controllers, ensures seamless connections and smooth navigation to where you need to go!
                                     </p>
+                                </div>
+
+                                <div class="col-lg-12" style="padding-bottom: 10px;">
+                                    <h1 class="text-color">My Skills:</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -222,9 +247,14 @@
 
                                 <div class="col-lg-12">
                                     <p class="text-color">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
-                                        Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem.
+                                        Other skills in coding are akin to additional features in a person: social skills, general interactions, etc. They encompass frameworks, code editors, 
+                                        or handy tools that make coding easier, more efficient, or interconnected across multiple devices. It's like having those extra traits that enhance your 
+                                        overall coding experience!
                                     </p>
+                                </div>
+
+                                <div class="col-lg-12" style="padding-bottom: 10px;">
+                                    <h1 class="text-color">My Skills:</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -429,19 +459,10 @@
 
         <div class="row" style="margin-bottom: 40px;">
 
-            <div class="col-md-6 text-color" style="margin-bottom: 40px;">
+            <div class="col-md-6 text-color" style="margin-bottom: 40px; font-size: 20px;">
                 <p>
-                    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
-                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
-                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam 
-                    aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi 
-                    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat 
-                    quo voluptas nulla pariatur?"
-
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    Greetings! I'm Sam, a full-stack web developer based in the UK. Drawing from my background in animation, I infuse creativity and deliver unique programming solutions in my work. 
+                    With a year of self-taught experience, I've crafted various websites, spanning from straightforward to fully functional SPAs incorporating multiple CRUD operations.
                 </p>
             </div>
 
