--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -127,10 +127,12 @@ body {
     color: var(--grey);
 }
 
+/* Media Queries */
+
 @media(min-width: 1400px) {
     .left-side-custom-image {
-        min-height: 400px;
-        max-height: 450px;
+        min-height: 300px;
+        max-height: 350px;
     }
 
     .skills-title,
@@ -158,12 +160,17 @@ body {
     .center-images-formatting {
         margin-bottom: 20px;
     }
+
+    .random-padding {
+        padding-left: 5px; 
+        padding-right: 5px; 
+    }
 }
 
 @media(max-width: 1399px) {
     .left-side-custom-image {
-        min-height: 400px;
-        max-height: 450px;
+        min-height: 300px;
+        max-height: 350px;
     }
 
     .skills-title,
@@ -191,12 +198,17 @@ body {
     .center-images-formatting {
         margin-bottom: 20px;
     }
+
+    .random-padding {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 @media(max-width: 800px) {
     .left-side-custom-image {
-        min-height: 300px;
-        max-height: 350px;
+        min-height: 200px;
+        max-height: 250px;
     }
 
     .center-text-formatting {
@@ -229,12 +241,16 @@ body {
         margin-bottom: 20px;
     }
 
+    .random-padding {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 @media(max-width: 600px) {
     .left-side-custom-image {
-        min-height: 200px;
-        max-height: 250px;
+        min-height: 100px;
+        max-height: 150px;
     }
 
     .center-text-formatting {
@@ -266,12 +282,17 @@ body {
     .center-images-formatting {
         margin-bottom: 10px;
     }
+
+    .random-padding {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 @media(max-width: 350px) {
     .left-side-custom-image {
-        min-height: 150px;
-        max-height: 200px;
+        min-height: 50px;
+        max-height: 100px;
     }
 
     .center-text-formatting {
@@ -303,6 +324,11 @@ body {
     .center-images-formatting {
         margin-bottom: 10px;
     }
+
+    .random-padding {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 @media(max-width: 250px) {
@@ -316,6 +342,90 @@ body {
         font-size: 11px
     }
 
+    .random-padding {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+}
+
+/* Animations */
+
+@keyframes opacityOne {
+    0% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+
+
+    50% {
+        opacity: 0.3;
+        transform: scale(1.1);
+    }
+
+
+    100% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+}
+
+@keyframes opacityTwo {
+    0% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+
+
+    50% {
+        opacity: 0.3;
+        transform: scale(1.2);
+    }
+
+
+    100% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+}
+
+@keyframes opacityThree {
+    0% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+
+
+    50% {
+        opacity: 0.3;
+        transform: scale(1.3);
+    }
+
+
+    100% {
+        opacity: 0.9;
+        transform: scale(1);
+    }
+}
+
+@keyframes textSlide {
+    0% {
+        transform: translateX(500px)
+    }
+
+    100% {
+        transform: translateX(0px)
+    }
+}
+
+@keyframes initialPosition {
+    0% {
+        transform: translateX(-500px);
+    }
+
+    100% {
+        transform: translateX(0px);
+    }
 }
 
 
