animations on load

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
 <div style="background-color: lightblue; padding-top: 100px;">
 
     <div style="z-index: 2; position: absolute; top: 100px; left: 40px;">
-        <h1 class="font-weight-bold" style="font-size: 150px;">Samuel Cole</h1>
-        <h2 class="font-weight-bold" style="font-size: 130px;">Front End Developer</h2>
+        <h1 class="font-weight-bold name-title" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
+        <h2 class="font-weight-bold profession-title " style="animation: textSlideTitles 3s;">Front End Developer</h2>
     </div>
 
     <div class="row h-100" style="z-index: 2;">
@@ -78,35 +78,35 @@
                 <div class="col-md-12 order-sm-1" style="z-index: 2;">
                     <div class="row">
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.2s;">
                             <div class="skills-title">My Skills:</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.3s; ">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.5s; ">
                             <div class="skill">Javascript</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.6s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.8s;">
                             <div class="skill">C#</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.9s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.1s;">
                             <div class="skill">HTML</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.2s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.4s;">
                             <div class="skill">CSS</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.5s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.7s;">
                             <div class="skill">.NET</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.8s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3s;">
                             <div class="skill">NodeJS</div>
                         </div>
 
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 4.1s;">
+                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.3s;">
                             <div class="skill">MongoDB</div>
                         </div>
 
