neatening everything up

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -7,79 +7,82 @@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 
 <!-- Primary area that I will be writing my HTML -->
-<div style="background-color: lightblue; padding-top: 100px;">
+<div style="background-color: white; padding-top: 100px;">
 
     <div style="z-index: 2; position: absolute; top: 100px; left: 40px;">
-        <h1 class="font-weight-bold name-title" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
-        <h2 class="font-weight-bold profession-title " style="animation: textSlideTitles 3s;">Front End Developer</h2>
+        <h1 class="font-weight-bold name-title splash-titles" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
+        <h2 class="font-weight-bold profession-title splash-titles" style="animation: textSlideTitles 3s;">Front End Developer</h2>
+
+        <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
+        <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
     </div>
 
     <div class="row h-100" style="z-index: 2;">
 
-        <div class="col-6" style="height: 100%;">
+        <div class="col-md-8 col-lg-8 col-sm-8 col-6" style="height: 100%;">
 
             <div class="row">
                 <div class="col-12 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid mx-auto custom-image random-padding" alt="Responsive Image" style="animation: opacityThree 3s infinite alternate; animation-delay: 2s;" />
+                    <img src="/Assets/images/SVGs/c-sharp-blue.svg" class="img-fluid mx-auto custom-image splash-image-opacity" alt="Responsive Image" style="animation: opacityThree 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 2s;" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityThree 4s infinite alternate; animation-delay: 1s;" />
+                    <img src="/Assets/images/SVGs/html5-blue.svg" class="img-fluid medium-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityThree 4s infinite alternate, opacity 4s infinite alternate; animation-delay: 1s;" />
                 </div>
 
                 <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate; animation-delay: 3s;" />
+                    <img src="/Assets/images/SVGs/node-js-blue.svg" class="img-fluid medium-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate, opacity 2s infinite alternate; animation-delay: 3s;" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 3s infinite alternate; animation-delay: 1s;" />
+                    <img src="/Assets/images/SVGs/git-blue.svg" class="img-fluid small-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityTwo 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 1s;" />
                 </div>
 
                 <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityThree 2s infinite alternate; animation-delay: 2s;" />
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityThree 2s infinite alternate, opacity 2s infinite alternate; animation-delay: 2s;" />
                 </div>
 
                 <div class="col-4 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 2s infinite alternate; animation-delay: 3s;" />
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid small-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityOne 2s infinite alternate, opacity 2s infinite alternate; animation-delay: 3s;" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 1s;" />
+                    <img src="/Assets/images/SVGs/javascript-blue.svg" class="img-fluid medium-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 1s;" />
                 </div>
 
                 <div class="col-6 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid medium-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate; animation-delay: 3s;" />
+                    <img src="/Assets/images/SVGs/css3-blue.svg" class="img-fluid medium-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityTwo 2s infinite alternate, opacity 2s infinite alternate; animation-delay: 3s;" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12 center-images-formatting">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid large-displays mx-auto random-padding" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 2s;" />
+                    <img src="/Assets/images/SVGs/react.svg" class="img-fluid large-displays mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 2s;" />
                 </div>
             </div>
 
         </div>
 
 
-
-        <div class="col-6" style="height: 100%;">
+        <div class="col-md-4 col-lg-4 col-sm-4 col-6" style="height: 100%; margin-bottom: 20px; right: 0;">
 
             <div class="row">
+
                 <div class="col-md-12 center-images-formatting order-sm-2" style="padding-top: 20px;">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate; animation-delay: 2s;" />
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 2s;" />
                 </div>
 
                 <div class="col-md-12 order-sm-1" style="z-index: 2;">
                     <div class="row">
 
                         <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.2s;">
-                            <div class="skills-title">My Skills:</div>
+                            <div class="skills-title splash-titles">My Skills:</div>
                         </div>
 
                         <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.5s; ">
@@ -116,7 +119,6 @@
 
 
         </div>
-
         
     </div>
 
@@ -145,13 +147,13 @@
             <div class="col-md-4 col-sm-12 knowledge-box-container bottom-border">
                     
                         <div class="row justify-content-center align-items-center knowledge-block">
-                        
-                                <div class="col-lg-12">
-                                    <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
-                                </div>
+
+                            <div class="col-lg-12 text-center">
+                                <img src="/Assets/images/SVGs/Front-End-Background.svg" class="img-fluid" alt="Responsive Image" style="width: 100%;" />
+                            </div>
 
                                 <div class="col-lg-12">
-                                    <h1 class="text-color">Front End</h1>
+                                    <h1 class="knowledge-area-title" >Front End</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -163,8 +165,8 @@
                                 
                                  </div>
 
-                                 <div class="col-lg-12" style="padding-bottom: 10px;">
-                                    <h1 class="text-color">My Skills:</h1>
+                                 <div class="col-lg-12">
+                                    <h1 class="knowledge-area-title">My Skills:</h1>
                                 </div>
 
                     
@@ -172,15 +174,15 @@
 
                                     <div class="row">
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -194,11 +196,11 @@
                 <div class="row justify-content-center align-items-center knowledge-block">
 
                                 <div class="col-lg-12">
-                                    <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                                    <img src="/Assets/images/SVGs/Back-End-Background.svg" class="img-fluid" alt="Responsive Image" />
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <h1 class="text-color">Back-End</h1>
+                                    <h1 class="knowledge-area-title">Back-End</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -208,23 +210,27 @@
                                     </p>
                                 </div>
 
-                                <div class="col-lg-12" style="padding-bottom: 10px;">
-                                    <h1 class="text-color">My Skills:</h1>
+                                <div class="col-lg-12">
+                                    <h1 class="knowledge-area-title">My Skills:</h1>
                                 </div>
 
                                 <div class="col-lg-12">
 
                                     <div class="row">
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/node-js-grey.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
+
+                                        <div class="col-3">
+                                            <img src="/Assets/images/SVGs/express-js-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -238,11 +244,11 @@
                 <div class="row justify-content-center align-items-center knowledge-block">
 
                                 <div class="col-lg-12">
-                                    <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                                    <img src="/Assets/images/SVGs/Other-Skills-Background.svg" class="img-fluid" alt="Responsive Image" />
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <h1 class="text-color" >Other Skills</h1>
+                                    <h1 class="knowledge-area-title" >Other Skills</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -253,19 +259,19 @@
                                     </p>
                                 </div>
 
-                                <div class="col-lg-12" style="padding-bottom: 10px;">
-                                    <h1 class="text-color">My Skills:</h1>
+                                <div class="col-lg-12">
+                                    <h1 class="knowledge-area-title">My Skills:</h1>
                                 </div>
 
                                 <div class="col-lg-12">
 
                                     <div class="row">
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/dotnet-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
-                                            <img src="/Assets/images/SVGs/java.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/git-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
                                         <div class="col-3">
