--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -118,13 +118,17 @@ body {
     margin: 10px;
 }
 
-.skills-title {
+.splash-titles {
     color: dodgerblue;
     font-weight: 700;
 }
 
 .skill {
     color: var(--grey);
+}
+
+.splash-image-opacity {
+    opacity: 0.3;
 }
 
 /* Media Queries */
@@ -183,12 +187,6 @@ body {
     .center-images-formatting {
         margin-bottom: 20px;
     }
-
-    .random-padding {
-        padding-left: 5px; 
-        padding-right: 5px; 
-    }
-
     
 }
 
@@ -223,11 +221,6 @@ body {
 
     .center-images-formatting {
         margin-bottom: 20px;
-    }
-
-    .random-padding {
-        padding-left: 5px;
-        padding-right: 5px;
     }
 
     .name-title {
@@ -302,11 +295,6 @@ body {
         margin-bottom: 20px;
     }
 
-    .random-padding {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-
     .name-title {
         font-size: 65px;
     }
@@ -356,11 +344,6 @@ body {
 
     .center-images-formatting {
         margin-bottom: 10px;
-    }
-
-    .random-padding {
-        padding-left: 5px;
-        padding-right: 5px;
     }
 
     .name-title {
@@ -442,11 +425,6 @@ body {
         margin-bottom: 10px;
     }
 
-    .random-padding {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-
     .name-title {
         font-size: 45px;
     }
@@ -476,88 +454,6 @@ body {
 
 }
 
-/* Animations */
-
-@keyframes opacityOne {
-    0% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-
-
-    50% {
-        opacity: 0.3;
-        transform: scale(1.1);
-    }
-
-
-    100% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-}
-
-@keyframes opacityTwo {
-    0% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-
-
-    50% {
-        opacity: 0.3;
-        transform: scale(1.2);
-    }
-
-
-    100% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-}
-
-@keyframes opacityThree {
-    0% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-
-
-    50% {
-        opacity: 0.3;
-        transform: scale(1.3);
-    }
-
-
-    100% {
-        opacity: 0.9;
-        transform: scale(1);
-    }
-}
-
-@keyframes textSlide {
-    0% {
-        transform: translateX(700px)
-    }
-
-    100% {
-        transform: translateX(0px)
-    }
-}
-
-@keyframes textSlideTitles {
-    0% {
-        transform: translateX(-700px)
-    }
-
-    100% {
-        transform: translateX(0px)
-    }
-}
-
-
-
-
 
 /* Knowledge Section */
 
@@ -569,6 +465,12 @@ body {
     margin: 10px;
     padding: 10px;
     padding-bottom: 60px;
+}
+
+.knowledge-area-title {
+    color: white;
+    font-weight: 700;
+    padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
